--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -20,6 +20,9 @@ on:
       eckit:
         required: false
         type: string
+      odc:
+        required: false
+        type: string
       metkit:
         required: false
         type: string
@@ -36,6 +39,7 @@ jobs:
       eccodes: ${{ steps.setup.outputs.eccodes }}
       eccodes-python: ${{ steps.setup.outputs.eccodes-python }}
       eckit: ${{ steps.setup.outputs.eckit }}
+      odc: ${{ steps.setup.outputs.odc }}
       metkit: ${{ steps.setup.outputs.metkit }}
       atlas: ${{ steps.setup.outputs.atlas }}
       mir: ${{ steps.setup.outputs.mir }}
@@ -57,6 +61,8 @@ jobs:
               path: .github/ci-hpc-config.yml
               python: true
             ${{ inputs.eckit || 'ecmwf/eckit@develop' }}:
+              path: .github/ci-hpc-config.yml
+            ${{ inputs.odc || 'ecmwf/odc@develop' }}:
               path: .github/ci-hpc-config.yml
             ${{ inputs.metkit || 'ecmwf/metkit@develop' }}:
               path: .github/ci-hpc-config.yml
@@ -166,6 +172,26 @@ jobs:
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
           repository: ${{ inputs.eckit || 'ecmwf/eckit@develop' }}
           build_config: .github/ci-hpc-config.yml
+
+  odc:
+    name: odc
+    needs: [setup, eckit]
+    if: ${{ always() && contains(join(needs.*.result, ','), 'success') && (inputs.eckit || inputs.odc) }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.odc) }}
+    runs-on:
+      [self-hosted, linux, "${{ inputs.dev_runner && 'hpc-dev' || 'hpc' }}"]
+    steps:
+      - uses: ecmwf-actions/reusable-workflows/ci-hpc@v2
+        with:
+          github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
+          github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
+          troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
+          repository: ${{ inputs.odc || 'ecmwf/odc@develop' }}
+          build_config: .github/ci-hpc-config.yml
+          dependencies: |
+            ${{ inputs.eckit }}
 
   metkit:
     name: metkit
